# SI5-Edge-AI

./: .gitignore  README.md  pyproject.toml
docs/benchmark/: benchmark.typ  benchmarkingCriterias.typ  conclusion.typ  context.typ  devices.typ  main.typ  pipeline.typ  protocol.typ
model_optimizer/: blob_convertor.py  prune.py  quantization.py
model_optimizer/ultralytics/cfg/datasets/: voc500.yaml
models/: yolo11n-seg_int8.onnx  yolo11n_seg_prune_0_5_openvino_2022.1_8shave.blob  yolo11n_seg_prune_0_75.onnx  yolo11n_seg_prune_0_75_openvino_2022.1_8shave.blob  yolo11n_seg_quantized_int8.onnx
optimizations/quantization/: quantization.py
results/: analyse_result.py  benchmark_cpu.csv  benchmark_gpu.csv  benchmark_oakd.csv  benchmark_rasp.csv  benchmark_summary.csv  benchmark_summary_oakd.csv  benchmark_summary_onnx.csv  cpu.csv  gpu.csv  log benchmark oakd.txt  log benchmark onnx.txt  log benchmark onnx2.txt  resultats_mesures_oakd.csv  resultats_mesures_onnx.csv  resultats_mesures_onnx2.csv  v1.csv  v2.csv
results/power_monitoring/: cpu_prepared.csv  cpu_with_gpu.csv  cpu_with_gpu_prepared.csv  nvidia_gpu.csv  nvidia_gpu_prepared.csv  oakd.csv  oakd_prepared.csv  rasp.csv  rasp_prepared.csv
src/: extract_power.py  main.py  oak_d.py  onnx.py  pipeline.py
src/backends/: inference_backend.py  onnx_backend.py
src/helpers/: utils.py
