[project]
name = "si5-edge-ai"
version = "0.1.0"
description = "Edge AI benchmarking project for YOLO models"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.4.0",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "pycocotools>=2.0.11",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.4",
    "depthai==2.31.0.0",
    "onnxruntime>=1.23.2",
    "google-genai>=1.59.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "opencv-python-headless>=4.13.0.90",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
gpu = [
    "onnxruntime-gpu>=1.23.2",
    "pynvml>=13.0.1",
    "torch-pruning>=1.6.1",
]
